added index file

--- a/index.html
+++ b/index.html
@@ -1,10 +1,50 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>hello</title>
-  </head>
-<body>
-  <h1> new line</h1>
-  </body>
-  </html>
+    <head>
+        <link rel="stylesheet" href="styles4.css">
+        <title>Marioclub</title>
+    </head>
+    <body>
+        <header>
+            <h1>Marioclub</h1>
+        </header>
+        <section class="banner">
+            <img src="img/banner.png" alt="marioclub welcome banner">
+
+            <div class="welcome">
+                <h2>Welcome to <br><span>Mario club</span></h2>
+            </div>
+        </section>
+        <nav class="main-nav">
+            <ul>
+                <li>
+                    <a href="/join.html" class="join">Join the club</a>
+                </li>
+                <li><a href="/news.html">Latest news</a></li>
+                <li><a href="/games.html">New Games</a></li>
+                <li><a href="/contact.html">Contact</a></li>
+            </ul>
+        </nav>
+        <main>
+            <article>
+                <h2>Its me Mario</h2>
+                <p>The frilled lizard (Chlamy­dosaurus kingii) is a species in the family Agamidae. It is native to northern Australia and southern New Guinea. It is the only member of the genus Chlamydosaurus. Its common name comes from its large neck frill, usually folded against the lizard's body. It is about 90 cm (35 in) in length and can weigh 600 g (1.3 lb). Males are larger and more robust than females. The lizard is generally grey, brown, orangish-brown, or black.</p>
+            </article>
+            <ul class="images">
+                <li><img src="img/thumb-1.png" alt="mario thumb-1"></li>
+                <li><img src="img/thumb-2.png" alt="mario thumb 2"></li>
+            </ul>
+        </main>
+        <section class="join">
+            <h2>Join Today</h2>
+            <p>The frilled lizard (Chlamy­dosaurus kingii) is a species in the family Agamidae. It is native to northern Australia and southern New Guinea. It is the only member of the genus Chlamydosaurus. Its common name comes from its large neck frill, usually folded against the lizard's body. It is about 90 cm (35 in) in length and can weigh 600 g (1.3 lb). Males are larger and more robust than females. The lizard is generally grey, brown, orangish-brown, or black.</p>
+            <form>
+                <input type="email" name="email" placeholder="Type email and hit enter" required>
+            </form>
+        </section>
+        <footer>
+            <p class="copyright">Copyright 2023 mario club</p>
+        </footer>
+
+    </body>
+</html>
